# doedensonline

./: .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  Pipfile  README.md  check.sh  docker-compose.yml  format.sh
iac/: .pdm-python  .terraform.lock.hcl  ansible.cfg  main.tf  nginx.conf  playbook.yaml  pyproject.toml  sync.yaml  versions.tf
src/: .Dockerignore  .dockerignore  Dockerfile  Gemfile  Pipfile  check.sh  docker-compose.yml  en.yml  format.sh  heroku.yml  pyproject.toml
src/app/controllers/: application.rb  application_controller.rb  home_controller.rb  news_controller.rb  photo_album_comments_controller.rb  photo_album_pictures_controller.rb  photo_albums_controller.rb  settings_controller.rb  users_controller.rb
src/app/helpers/: news_helper.rb  photo_album_comments_helper.rb  photo_album_pictures_helper.rb
src/app/models/: mailer.rb  news_comment.rb  news_item.rb  photo_album.rb  photo_album_comment.rb  photo_album_picture.rb  upload_picture.rb  user.rb
src/app/views/home/: index.html.erb  password_forgotten.html.erb  sign_in.html.erb  sign_out.html.erb
src/app/views/layouts/: default.html.erb  (+1 more)
src/config/: boot.rb  environment.rb  routes.rb
src/config/initializers/: mailer.rb  session_store.rb
src/doedensonline/albums/: apps.py
src/doedensonline/core/: asgi.py  layout.py  manage.py  mixins.py  newrelic.ini  settings.py  urls.py  wsgi.py
src/doedensonline/home/: urls.py  views.py
src/doedensonline/posts/: admin.py  models.py  urls.py  views.py
src/nbproject/: project.xml
src/public/: .ftpquota  .htaccess
src/public/javascripts/: load-tiny-mce.js  test.js
src/public/media/: handleiding.doc
src/public/stylesheets/: colorbox.css  home.css  ie6.css  ie7.css  main.css  news.css  photo_albums.css  settings.css  tiny-mce.css
src/test/fixtures/: news_comments.yml  users.yml
src/test/functional/: news_comments_controller_test.rb  photo_albums_controller_test.rb
(+89 files in other folders)
