[tool.poetry]
name = "iac"
version = "0.1.0"
description = ""
authors = ["Gijs van der Voort <vandervoort.gijs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.1.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
